--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -8,13 +8,14 @@
 }
 
 .name {
-  color: #0f9d58;
+  color: #cf4141;
   font-size: 1.1rem;
   font-weight: bold;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .logout {
-  background: #0f9d58;
+  background: #cf4141;
   padding: 5px 10px;
   color: #fff;
   border-radius: 5px;
@@ -23,5 +24,5 @@
 }
 
 .logout:hover {
-  background: #07713e;
+  background: #674b44;
 }
